Reverse Engineering を承認（全体の読み直しを選び、深く読んだのは4件に関わる29ファイルのため範囲は partial。コードの知識ベースを作り直し、4件の所見を TD-1〜TD-4 に記録。学び3件を保存）
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>